--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "crypto-js": "^4.2.0",
     "ethers": "^6.14.3",
     "framer-motion": "^12.15.0",
+    "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-scroll-parallax": "^3.4.5",
+    "react-select": "^5.10.1",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
