--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "ethers": "^6.14.3",
     "framer-motion": "^12.15.0",
